crates/shipper/src/runtime/execution/snapshots/shipper__runtime__execution__tests__snapshots__snapshot_classify_empty_output.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: snap
---
class: ambiguous
message: publish outcome ambiguous; registry did not show version
