crates/shipper/src/runtime/execution/snapshots/shipper__runtime__execution__tests__snapshots__snapshot_retry_config_linear.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: config
---
strategy: linear
max_attempts: 4
base_delay: 500ms
max_delay: 30s
jitter: 0.25
