crates/shipper/src/runtime/execution/snapshots/shipper__runtime__execution__tests__snapshots__snapshot_state_multi_package_mixed_outcomes.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: st
---
state_version: shipper.state.v1
plan_id: plan-snapshot-test
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
created_at: "2025-01-15T12:00:00Z"
updated_at: "2025-01-15T12:00:00Z"
packages:
  cli@1.0.0:
    name: cli
    version: 1.0.0
    attempts: 0
    state:
      state: skipped
      reason: dependency utils@1.0.0 failed
    last_updated_at: "2025-01-15T12:00:00Z"
  core@1.0.0:
    name: core
    version: 1.0.0
    attempts: 1
    state:
      state: published
    last_updated_at: "2025-01-15T12:00:00Z"
  utils@1.0.0:
    name: utils
    version: 1.0.0
    attempts: 1
    state:
      state: failed
      class: permanent
      message: not authorized
    last_updated_at: "2025-01-15T12:00:00Z"
