crates/shipper/src/runtime/execution/snapshots/shipper__runtime__execution__tests__snapshots__snapshot_state_success_flow.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: st
---
state_version: shipper.state.v1
plan_id: plan-snapshot-test
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
created_at: "2025-01-15T12:00:00Z"
updated_at: "2025-01-15T12:00:00Z"
packages:
  demo@1.0.0:
    name: demo
    version: 1.0.0
    attempts: 1
    state:
      state: published
    last_updated_at: "2025-01-15T12:00:00Z"
